--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,12 +1,88 @@
 pipeline {
-    agent any
-     stages{
-      stage('Hello'){
-       steps {
-         echo "Hello World"
+
+   agent any
+
+   tools{
+
+       maven 'M2_HOME'
+
+   }
+
+   environment {
+
+       registry = '975050061963.dkr.ecr.us-east-1.amazonaws.com/devops_repository'
+
+       registryCredential = 'jenkins-ecr'
+
+       dockerimage = ''
+
+   }
+
+   stages {
+
+       stage('Checkout'){
+
+           steps{
+
+               git branch: 'main', url: 'https://github.com/effexd101/helloworld_march_2024.git'
+
+           }
+
        }
-    }
-    
-    }
+
+       stage('Code Build') {
+
+           steps {
+
+               sh 'mvn clean package'
+
+           }
+
+       }
+
+       stage('Test') {
+
+           steps {
+
+               sh 'mvn test'
+
+           }
+
+       }
+
+       stage('Build Image') {
+
+           steps {
+
+               script{
+
+                   dockerImage = docker.build registry + ":$BUILD_NUMBER"
+
+               } 
+
+           }
+
+       }
+
+       stage('Deploy image') {
+
+           steps{
+
+               script{ 
+
+                   docker.withRegistry("https://"+registry,"ecr:us-east-1:"+registryCredential) {
+
+                       dockerImage.push()
+
+                   }
+
+               }
+
+           }
+
+       }  
+
+   }
 
 }
+
